// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshots renders a default button with text 1`] = `
<button
  className="sc-bdVaJa esNCtN"
  onClick={[Function]}
  style={undefined}
>
  Button
</button>
`;

exports[`Button snapshots renders a primary button with text 1`] = `
<button
  className="sc-bwzfXH kgYHCc"
  onClick={[Function]}
  style={undefined}
>
  Button
</button>
`;

exports[`Button snapshots renders a small default button with text 1`] = `
<button
  className="sc-htpNat kHRfmE"
  onClick={[Function]}
  style={undefined}
>
  Button
</button>
`;

exports[`Button snapshots renders a small primary button with text 1`] = `
<button
  className="sc-bxivhb aYoIQ"
  onClick={[Function]}
  style={undefined}
>
  Button
</button>
`;
